<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayInfoActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:src="@drawable/groessenmesser" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical" 
        android:layout_weight=".50">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_gravity="fill_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:text="@string/A" 
                android:layout_width="0dp" 
                android:layout_weight=".30"/>

            <EditText
                android:id="@+id/EditTextA"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:text="@string/Zero"
                android:inputType="numberDecimal">

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_gravity="fill_horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp" 
                android:layout_weight=".30"
                android:text="@string/B" />

            <EditText
                android:id="@+id/EditTextB"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:text="@string/Zero" 
                android:inputType="numberDecimal"/>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_gravity="fill_horizontal" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="0dp" 
                android:layout_weight=".30"
                android:text="@string/Alpha" />

            <EditText
                android:id="@+id/EditTextAlpha"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:text="@string/Zero" 
                android:inputType="numberDecimal"
                android:enabled="false"/>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_gravity="fill_horizontal" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="0dp" 
                android:layout_weight=".30"
                android:text="@string/Beta" />

            <EditText
                android:id="@+id/EditTextBeta"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:text="@string/Zero" 
                android:inputType="numberDecimal"
                android:enabled="false"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_gravity="fill_horizontal" >
            <Button
                android:id="@+id/buttonMeasure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/measure" />
            
            <Button
                android:id="@+id/buttonCalc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:text="@string/Calc" />

            
        </TableRow>

    </GridLayout>

</LinearLayout>